<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HereAStory</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_story">CreateStoryActivity</string>
    <string name="title_activity_record_audio">CaptureAudioActivity</string>
    <string name="title_activity_hear_story">HearStoryActivity</string>
    <string name="add_description_for_the_story">Add a description for the story</string>
    <string name="next">Next</string>
    <string name="back_to_map">Back to map</string>
    <string name="capture_picture">Capture picture</string>
    <string name="start_recording_audio">Start Record</string>
    <string name="stop_recording_audio">Stop Record</string>
    <string name="start_playing_audio">Start Play</string>
    <string name="stop_playing_audio">Stop Play</string>
    <string name="marker_loading_title">Loading&#8230;</string>
    <string name="marker_failed_title">No data available :(</string>
    <string name="marker_failed_snippet">Please try again.</string>

    <!-- Buttons -->
    <string name="record_story_button">Record a Story</string>
    <string name="close_exception_dialog">OK</string>

    <!-- Error messages -->
    <string name="gps_unavailable_exception">Please turn on your GPS before continuing.</string>
    <string name="location_unavailable_exception">Can\'t acquire location. Please go outdoors.</string>
    <string name="error_occurred">An error occurred</string>
    <string name="return_to_map">Return to map</string>
    <string name="failed_start_recording">Failed start recording</string>
    <string name="failed_stop_recording">Failed stop recording</string>
    <string name="failed_start_playing">Failed start playing</string>
    <string name="failed_showing_image">Failed showing image</string>
    <string name="failed_compressing_image">Failed compressing image</string>
    <string name="title_cant_be_empty">Title can\'t be empty</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Internal string -->
    <string name="facebook_app_id">459152000844399</string> <!-- 760937370632014  -->       
    <string name="default_map_locale">iw</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="hello_world">Hello world!</string>

     <string name="title_section1">tutorial</string>
    <string name="title_section2">about</string>
    <string name="title_section3"/>
    <string name="title_section4">Give Like :)</string>
    <string name="title_section5">Share</string>
    <string name="title_section6">Feedback</string>
    <string name="title_section7"/>
    <string name="title_section8">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    
    <string name="create_story_logo">create_story_logo</string>
    <string name="random_story_logo">New Story!</string>
	<string name="logo">ic_nav_bar_logo.png</string>
	
	<string name="CreateStory_Panel">CreateStory_Panel</string>
    
</resources>